--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
 		"ignore": [".next/**"]
 	},
@@ -7,7 +8,9 @@
 	},
 	"linter": {
 		"enabled": true,
-		"recommended": false
+		"rules": {
+			"recommended": false
+		}
 	},
 	"organizeImports": {
 		"enabled": false
@@ -17,5 +20,13 @@
 			"quoteStyle": "single",
 			"semicolons": "asNeeded"
 		}
-	}
+	},
+	"overrides": [
+		{
+			"include": ["**/package.json"],
+			"formatter": {
+				"lineWidth": 1
+			}
+		}
+	]
 }
